--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-outside-click-handler": "^1.3.0",
+    "react-select": "^5.7.3",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@types/react-outside-click-handler": "^1.3.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
