--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "isomorphic-unfetch": "^4.0.2",
+    "js-cookie": "^3.0.5",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +34,7 @@
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@types/js-cookie": "^3.0.3",
     "@types/react-no-ssr": "^1.1.3",
     "@types/react-outside-click-handler": "^1.3.1",
     "autoprefixer": "^10.4.14",
