--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "i18next": "^22.5.1",
     "isomorphic-unfetch": "^4.0.2",
     "js-cookie": "^3.0.5",
     "next": "13.4.2",
-    "react": "18.2.0",
+    "next-i18next": "^13.3.0",
+    "next-intl": "^2.14.6",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
