--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.29.11",
     "@tanstack/react-query-devtools": "^4.29.11",
     "@types/node": "20.2.0",
+    "@types/pusher-js": "^5.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "axios": "^0.25.0",
@@ -21,10 +22,12 @@
     "i18next": "^22.5.1",
     "isomorphic-unfetch": "^4.0.2",
     "js-cookie": "^3.0.5",
+    "laravel-echo": "^1.15.1",
     "next": "13.4.2",
     "next-i18next": "^13.3.0",
     "next-intl": "^2.14.6",
     "nookies": "^2.5.2",
+    "pusher-js": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
