--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.25.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "html-parse-stringify": "^3.0.1",
     "i18next": "^22.5.1",
     "isomorphic-unfetch": "^4.0.2",
     "js-cookie": "^3.0.5",
@@ -31,11 +32,13 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.3.1",
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
     "react-query": "^3.39.3",
     "react-select": "^5.7.3",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "void-elements": "^3.1.0"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
