--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       }
     ],
     "paths": {
-      "@/components": ["components/index"]
+      "@/components": ["components/index"],
+      "@/hooks": ["hooks/index"]
     }
   },
   "include": [
