--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "isomorphic-unfetch": "^4.0.2",
     "js-cookie": "^3.0.5",
     "laravel-echo": "^1.15.1",
+    "moment": "^2.29.4",
     "next": "13.4.2",
     "next-i18next": "^13.3.0",
     "next-intl": "^2.14.6",
