--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_BASE_URL_API=http://localhost:8000/api
 NEXT_PUBLIC_BASE_URL=http://localhost:8000
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_PUSHER_APP_KEY=0f5223a1cd897e39c0c5
+NEXT_PUBLIC_PUSHER_APP_CLUSTER=ap2
